# SafeCRI-ROS

./: CMakeLists.txt  README.md  package.xml
src/: emotion_game_node.py  qt_speech_server.py  rasa_server_node.py
srv/: TextToSpeech.srv
